@@ -11,6 +11,7 @@
         <a href="/index/table"><li class="list-group-item">Table</li></a>
         <a href="/index/table2"><li class="list-group-item">Table2</li></a>
         <a href="/index/table3"><li class="list-group-item">Table3</li></a>
+        <a href="/table/table"><li class="list-group-item">Ajax table</li></a>
 
         <li class="list-group-item list-group-item-dark">Forms</li>
         <a href="/form/newForm"><li class="list-group-item">New form</li></a>
