@@ -12,6 +12,7 @@ Micro-framework
     - Download file from common file
     - Add JS loader to view
     - Change example view
+    - Add checkboxes to table
 
 v0.0.20-alpha
 Micro-framework
